fixed width on mobile home page

--- a/app/src/css/main.scss
+++ b/app/src/css/main.scss
@@ -660,7 +660,7 @@ margin: 10px 0 0 10px;
 
   .content {
       height: 88vh;
-      width: 100vw;
+      width: auto;
       margin-bottom: 10vh;
       display: flex;
       flex-direction: column;
